--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
+    "mongo": "^0.1.0",
     "mongoose": "^5.7.8"
   }
 }
